--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^3.1.10",
     "rate-limiter-flexible": "^7.1.1",
     "ua-parser-js": "^2.0.3",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "zod": "^3.25.56"
   },
@@ -39,6 +40,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.30",
     "@types/ua-parser-js": "^0.7.39",
+    "@types/uuid": "^10.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
