--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
+    "@types/node-mailjet": "^3.3.12",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -25,6 +26,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "node-mailjet": "^6.0.8",
     "nodemon": "^3.1.10",
     "rate-limiter-flexible": "^7.1.1",
     "ua-parser-js": "^2.0.3",
