chore: dockerfile and docker-compose created

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
 PORT=xxxx
 JWT_SECRET=xxxxxx
 JWT_ACCESS_EXPIRE=xxxxx
-DATABASE_URL="xxxxxx"
+
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_HOST=
+DATABASE_NAME=
+
 ADMIN_EMAIL=xxxxx
 ADMIN_USERNAME=xxxxx
 ADMIN_FIRST_NAME=xxxxx
