--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
+    "form-data": "^4.0.3",
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "mailgun.js": "^12.0.2",
     "mongoose": "^8.15.1",
     "node-mailjet": "^6.0.8",
     "nodemon": "^3.1.10",
