feat: changing id from number to string uuid and enhance mongodb setup

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,79 @@
+# 🔧 Environment Variables Template for Production Deployment
+# Copy this to .env and fill in the actual values
+
+# ============================================================================
+# DATABASE CONFIGURATION
+# ============================================================================
+# PostgreSQL connection string
+# Format: postgresql://username:password@host:port/database_name?sslmode=require
+DATABASE_URL="postgresql://your_username:your_password@your_host:5432/your_database_name?sslmode=require"
+
+# Database individual components (if using config.ts format)
+DATABASE_USER="your_username"
+DATABASE_PASSWORD="your_password"
+DATABASE_HOST="your_host"
+DATABASE_NAME="your_database_name"
+
+# ============================================================================
+# JWT CONFIGURATION
+# ============================================================================
+# Strong secret key for JWT tokens (generate with: openssl rand -base64 32)
+JWT_SECRET="your_super_strong_jwt_secret_key_here"
+JWT_ACCESS_EXPIRE="15m"
+JWT_REFRESH_EXPIRE="7d"
+
+# ============================================================================
+# SERVER CONFIGURATION
+# ============================================================================
+PORT=3000
+NODE_ENV="production"
+
+# ============================================================================
+# CORS CONFIGURATION
+# ============================================================================
+# Comma-separated list of allowed origins
+ALLOWED_ORIGINS="https://your-frontend-domain.com,http://localhost:3000"
+
+# ============================================================================
+# RATE LIMITING
+# ============================================================================
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=5
+
+# ============================================================================
+# SECURITY
+# ============================================================================
+BCRYPT_SALT_ROUNDS=12
+
+# ============================================================================
+# LOGGING
+# ============================================================================
+LOG_LEVEL="info"
+
+# ============================================================================
+# EMAIL CONFIGURATION (Mailjet)
+# ============================================================================
+MJ_APIKEY_PRIVATE="your_mailjet_private_key"
+MJ_APIKEY_PUBLIC="your_mailjet_public_key"
+
+# ============================================================================
+# ADMIN SEEDING
+# ============================================================================
+ADMIN_EMAIL="admin@yourdomain.com"
+ADMIN_PASSWORD="your_secure_admin_password"
+ADMIN_USERNAME="admin"
+ADMIN_FIRST_NAME="Admin"
+ADMIN_LAST_NAME="User"
+
+# ============================================================================
+# PRISMA BUILD TARGET (for deployment platforms)
+# ============================================================================
+# Uncomment the appropriate line for your deployment platform:
+# PRISMA_BUILD="native"                    # For most platforms
+# PRISMA_BUILD="linux-openssl-1.1.x"      # For some Linux environments
+# PRISMA_BUILD="rhel-openssl-1.0.x"       # For RHEL/CentOS
+# PRISMA_BUILD="debian-openssl-1.1.x"     # For Debian/Ubuntu
+
 PORT=xxxx
 JWT_SECRET=xxxxxx
 JWT_ACCESS_EXPIRE=xxxxx
