--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.11.0",
+    "@types/multer": "^2.0.0",
     "@types/node-mailjet": "^3.3.12",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
@@ -21,7 +22,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "form-data": "^4.0.3",
     "helmet": "^8.1.0",
@@ -29,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "mailgun.js": "^12.0.2",
     "mongoose": "^8.15.1",
+    "multer": "^2.0.2",
     "node-mailjet": "^6.0.8",
     "nodemon": "^3.1.10",
     "rate-limiter-flexible": "^7.1.1",
@@ -42,7 +44,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.18",
-    "@types/express": "^5.0.2",
+    "@types/express": "^4.17.23",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.30",
     "@types/ua-parser-js": "^0.7.39",
